--- a/index.html
+++ b/index.html
@@ -43,15 +43,28 @@
                     <ul class="bg-dark" style="list-style-type:none">
                       <li style="font-family: inherit; font-size: 1rem;">
                         <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
+                        <input class="form-control" type="text" placeholder="1/10/2010" id="datetime" />
                       </li>
                       <li style="font-family: inherit; font-size: 1rem;">
-                         <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                        <label for="city">Enter City</label>
+                        <input class="form-control" type="text" placeholder="round rock" id="city"/>
+                      </li>
+                      <li style="font-family: inherit; font-size: 1rem;">
+                        <label for="state">Enter State</label>
+                        <input class="form-control" type="text" placeholder="tx" id="state"/>
+                      </li>
+                      <li style="font-family: inherit; font-size: 1rem;">
+                        <label for="country">Enter Country</label>
+                        <input class="form-control" type="text" placeholder="us" id="country"/>
+                      </li>
+                      <li style="font-family: inherit; font-size: 1rem;">
+                        <label for="shape">Enter Shape</label>
+                        <input class="form-control" type="text" placeholder="circle" id="shape"/>
                       </li>
                     </ul>
                    </form>
               </div>
-              <div class="col-mid-9">
+              <div class="col-md-9">
                 <table class="table table-striped">
                     <thead>
                       <tr>
